--- a/tool-xsc-aid/src/main/resources/application.yml
+++ b/tool-xsc-aid/src/main/resources/application.yml
@@ -7,3 +7,6 @@ xsc:
     tickets-by-uid-path: /admission-tickets/user/{user-id}
     single-test-path: /tests/{test-id}
     test-ids: fad153df-a125-452d-a726-ee18d5142279, 21dc7f9d-80a7-41da-8759-d49f936501ff, 62ab7ec7-3edf-481a-aec3-352fbe145681, 6cf31943-4d59-4fde-9781-ad0aa0b72ec6, 7d6d3cac-1235-4d2b-98cd-a508d5ad7d08
+    pressure-foreign-id-prefix: 'FOREIGN_USER:TEST:PRESSURE:'
+    pressure-user-count: 500
+    god-vcode: 999999
