--- a/tool-xsc-aid/src/main/resources/application.yml
+++ b/tool-xsc-aid/src/main/resources/application.yml
@@ -6,7 +6,14 @@ xsc:
     fid-to-uid-path: /uids/fid/{foreign-id}
     tickets-by-uid-path: /admission-tickets/user/{user-id}
     single-test-path: /tests/{test-id}
+    login-path: /login/vcode
+    answer-post-path: /answers/test/{test-id}/user/{user-id}
+    answersheet-post-path: /answer-sheets/{ticket-id}
     test-ids: fad153df-a125-452d-a726-ee18d5142279, 21dc7f9d-80a7-41da-8759-d49f936501ff, 62ab7ec7-3edf-481a-aec3-352fbe145681, 6cf31943-4d59-4fde-9781-ad0aa0b72ec6, 7d6d3cac-1235-4d2b-98cd-a508d5ad7d08
     pressure-foreign-id-prefix: 'FOREIGN_USER:TEST:PRESSURE:'
     pressure-user-count: 500
+    pt-leading-user-index: 0
+    pt-user-count: 250
+    answer-submission-repeat: 40
+    answer-commit-delay: 100
     god-vcode: 999999
