--- a/tool-xsc-aid/src/main/resources/application.yml
+++ b/tool-xsc-aid/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 xsc:
   aid:
-    x-auth-code: GOD_BLESS_ME
     server-base-url: http://localhost:8086/openeva
+    x-auth-code: GOD_BLESS_ME
+    test-ids: f77b2811-20ac-4701-b35e-3a9074d34080, fad153df-a125-452d-a726-ee18d5142279, 21dc7f9d-80a7-41da-8759-d49f936501ff, 62ab7ec7-3edf-481a-aec3-352fbe145681, 6cf31943-4d59-4fde-9781-ad0aa0b72ec6, 7d6d3cac-1235-4d2b-98cd-a508d5ad7d08
+    #    server-base-url: https://api.xueliceping.com/openeva
+    #    x-auth-code: b3d0369a-06b3-4cd8-8000-786765e63e46
+    #    test-ids: 1d42585b-7da4-4385-add3-d90511ac7852, fb803090-34a1-49e8-9bae-5754f64ccfbe, 86e96a7b-05c2-448f-a398-04c4960371d8
+
     ticket-gen-path: /admission-tickets/test/{test-id}
     fid-to-uid-path: /uids/fid/{foreign-id}
     tickets-by-uid-path: /admission-tickets/user/{user-id}
@@ -9,7 +14,6 @@ xsc:
     login-path: /login/vcode
     answer-post-path: /answers/test/{test-id}/user/{user-id}
     answersheet-post-path: /answer-sheets/{ticket-id}
-    test-ids: f77b2811-20ac-4701-b35e-3a9074d34080, fad153df-a125-452d-a726-ee18d5142279, 21dc7f9d-80a7-41da-8759-d49f936501ff, 62ab7ec7-3edf-481a-aec3-352fbe145681, 6cf31943-4d59-4fde-9781-ad0aa0b72ec6, 7d6d3cac-1235-4d2b-98cd-a508d5ad7d08
     pressure-foreign-id-prefix: 'FOREIGN_USER:TEST:PRESSURE:'
     pressure-user-count: 500
     pt-leading-user-index: 0
