--- a/tool-xsc-aid/src/main/resources/application.yml
+++ b/tool-xsc-aid/src/main/resources/application.yml
@@ -18,13 +18,15 @@ xsc:
     pressure-foreign-id-prefix: 'FOREIGN_USER:TEST:PRESSURE:'
     pressure-user-count: 500
     pt-leading-user-index: 0
-    pt-user-count: 1
+    pt-user-count: 500
     answer-submission-repeat: 40.0
     # unit=>ms
     answer-commit-delay: 100
     god-vcode: 999999
     # unit=>second
     exam-duration: 1800
+    # unit=>second
+    mock-client-trigger-window-span: 30
     # 最后一个答卷提交窗口期的跨度
     # unit=>second
     final-as-submission-window-span: 300
@@ -32,6 +34,8 @@ xsc:
     user-level-count: 5
     answers-count-ratio-gap: 0.1
     submission-delay-deviation: 0.2
+
+    pt-schedule-cron: '0 15 * * * ?'
 
 
 
