--- a/tool-xsc-aid/src/main/resources/application.yml
+++ b/tool-xsc-aid/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+spring:
+  data:
+    mongodb:
+      database: xsc_pk_201904_pt
+
 xsc:
   aid:
     server-base-url: http://localhost:8086/openeva
@@ -36,7 +41,4 @@ xsc:
     answers-count-ratio-gap: 0.1
     submission-delay-deviation: 0.2
 
-    pt-schedule-cron: '0 33 * * * ?'
-
-
-
+    pt-schedule-cron: '0 43 * * * ?'
