--- a/intent-pt/src/main/resources/application.yml
+++ b/intent-pt/src/main/resources/application.yml
@@ -2,7 +2,7 @@ pt:
   spec-recommend-path: 'http://192.168.0.125:8090/schoolMajorRank/queryByRank'
   spec-query-path: 'http://192.168.0.125:8090/schoolMajorRank/queryFilter'
   profile-update-path: 'https://cloud.benbenedu.cn/thumbelina/users/{id}/profile/custom'
-  answers-update-path: 'http://api.benbenedu.cn/thumbelina/assessments/{assessment-id}/modules/{module-id}/answers'
+  answers-update-path: 'https://cloud.benbenedu.cn/thumbelina/assessments/{assessment-id}/modules/{module-id}/answers'
 
   user-id: "_PT_TEST"
-  assessment-id: "5cf86f78b4f47074417e1e44"
+  assessment-id: "5d022429b4f47074417e1f05"
